<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.single_movie_details.SingleMovie">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/connection_problem"
            android:visibility="gone"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:scaleType="matrix"
            android:src="@drawable/default_movie"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="8dp">
         <TextView
             android:id="@+id/movie_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/movie_title"
             android:textStyle="bold"
             android:textSize="18sp"/>

                <TextView
                    android:id="@+id/movie_tagLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_title"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_info"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"/>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/releasedate"
                       android:layout_marginTop="2dp"
                       android:textStyle="bold"
                       android:textSize="12sp"/>

                   <TextView
                       android:id="@+id/movie_release_date"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="2dp"
                       android:text="@string/default_date"
                       android:textStyle="bold"
                       android:textSize="12sp"/>
               </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/rating"
                    android:textStyle="bold"
                    android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/movie_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/default_rate"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/runtime"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/movie_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/default_runtime"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/budget"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/movie_budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/default_budget"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/revenue"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/movie_revenue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/default_revenue"
                        android:textStyle="bold"
                        android:textSize="12sp"/>
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/overview"
                    android:textStyle="bold"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/default_overview"
                    android:textStyle="bold"
                    android:textSize="12sp"/>
            </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>